# GamePhysics

./: .gitignore  CMakeLists.txt  CMakeSettings.json  GamePhysics.sln  GamePhysics.vcxproj  GamePhysics.vcxproj.filters  README.md  gpt.cpp
001-Simulation/: 001-Simulation.vcxproj  001-Simulation.vcxproj.filters  main.cpp
002-Particle/: 002-Particle.vcxproj  002-Particle.vcxproj.filters  imgui.ini  main.cpp
include/: Angle.h  Constants.h  Logging.h  Matrix3x3.h  Matrix4x4.h  Particle.h  PhysicsObject.h  Quaternion.h  Quaternion.tpp  Simulator.h  Utils.h  Vector.h  Vector3.h  Vector4.h  Websocket.h
src/: Angle.cpp  Logging.cpp  Matrix3x3.cpp  Matrix4x4.cpp  PhysicsObject.cpp  Quaternion.cpp  Simulator.cpp  Vector.cpp  Vector3.cpp  Vector4.cpp  Websocket.cpp  main.cpp
